Update GET challenge path
